package grpc

import (
	"context"
	"fmt"
	"log"
	"time"

	"google.golang.org/protobuf/types/known/timestamppb"

	pb "github.com/aether/sync/api/proto"
	"github.com/aether/sync/internal/container"
	"github.com/aether/sync/internal/domain/entity"
	"github.com/aether/sync/pkg/scanner"
)

// FolderHandler FolderService implementasyonu
type FolderHandler struct {
	pb.UnimplementedFolderServiceServer
	container *container.Container
}

// NewFolderHandler yeni FolderHandler olu≈üturur
func NewFolderHandler(cont *container.Container) *FolderHandler {
	return &FolderHandler{container: cont}
}

// CreateFolder yeni klas√∂r olu≈üturur
func (h *FolderHandler) CreateFolder(ctx context.Context, req *pb.CreateFolderRequest) (*pb.FolderResponse, error) {
	// Sync mode'u d√∂n√º≈üt√ºr
	syncMode := convertSyncMode(req.SyncMode)

	// Yeni folder entity olu≈ütur
	folder := entity.NewFolder(req.LocalPath, syncMode)

	// Repository kullanarak kaydet
	if err := h.container.FolderRepository().Create(ctx, folder); err != nil {
		return &pb.FolderResponse{
			Status: &pb.Status{
				Success: false,
				Message: fmt.Sprintf("Klas√∂r olu≈üturulamadƒ±: %v", err),
				Code:    500,
			},
		}, nil
	}

	// üîç Klas√∂r√º tara ve dosyalarƒ± kaydet
	fileCount, err := h.scanAndSaveFiles(ctx, folder)
	if err != nil {
		log.Printf("‚ö†Ô∏è Klas√∂r taranamadƒ± (klas√∂r olu≈üturuldu ama dosyalar kaydedilmedi): %v", err)
		// Hata d√∂nd√ºrm√ºyoruz, √ß√ºnk√º klas√∂r ba≈üarƒ±yla olu≈üturuldu
	} else {
		log.Printf("‚úÖ %d dosya tarandƒ± ve kaydedildi", fileCount)
	}

	// Olu≈üturulan klas√∂r√º getir
	folder, err = h.container.FolderRepository().GetByID(ctx, folder.ID)
	if err != nil {
		return &pb.FolderResponse{
			Status: &pb.Status{
				Success: false,
				Message: fmt.Sprintf("Klas√∂r bilgisi alƒ±namadƒ±: %v", err),
				Code:    500,
			},
		}, nil
	}

	return &pb.FolderResponse{
		Status: &pb.Status{
			Success: true,
			Message: fmt.Sprintf("Klas√∂r ba≈üarƒ±yla olu≈üturuldu (%d dosya tarandƒ±)", fileCount),
			Code:    200,
		},
		Folder: convertFolderToProto(folder),
	}, nil
}

// GetFolder klas√∂r bilgisi getirir
func (h *FolderHandler) GetFolder(ctx context.Context, req *pb.GetFolderRequest) (*pb.FolderResponse, error) {
	folder, err := h.container.FolderRepository().GetByID(ctx, req.Id)
	if err != nil {
		return &pb.FolderResponse{
			Status: &pb.Status{
				Success: false,
				Message: fmt.Sprintf("Klas√∂r bulunamadƒ±: %v", err),
				Code:    404,
			},
		}, nil
	}

	return &pb.FolderResponse{
		Status: &pb.Status{
			Success: true,
			Message: "Klas√∂r bulundu",
			Code:    200,
		},
		Folder: convertFolderToProto(folder),
	}, nil
}

// ListFolders t√ºm klas√∂rleri listeler
func (h *FolderHandler) ListFolders(ctx context.Context, req *pb.ListFoldersRequest) (*pb.ListFoldersResponse, error) {
	// T√ºm klas√∂rleri getir
	folders, err := h.container.FolderRepository().GetAll(ctx)
	if err != nil {
		return &pb.ListFoldersResponse{
			Folders: []*pb.Folder{},
			Pagination: &pb.PaginationResponse{
				TotalCount:  0,
				TotalPages:  0,
				CurrentPage: 1,
			},
		}, fmt.Errorf("klas√∂rler listelenemedi: %w", err)
	}

	// Active_only filtresi varsa uygula
	if req.ActiveOnly {
		var activeFolders []*entity.Folder
		for _, f := range folders {
			if f.IsActive {
				activeFolders = append(activeFolders, f)
			}
		}
		folders = activeFolders
	}

	// Proto'ya d√∂n√º≈üt√ºr
	protoFolders := make([]*pb.Folder, len(folders))
	for i, folder := range folders {
		protoFolders[i] = convertFolderToProto(folder)
	}

	return &pb.ListFoldersResponse{
		Folders: protoFolders,
		Pagination: &pb.PaginationResponse{
			TotalCount:  int32(len(protoFolders)),
			TotalPages:  1,
			CurrentPage: 1,
		},
	}, nil
}

// UpdateFolder klas√∂r g√ºnceller
func (h *FolderHandler) UpdateFolder(ctx context.Context, req *pb.UpdateFolderRequest) (*pb.FolderResponse, error) {
	// Mevcut klas√∂r√º getir
	folder, err := h.container.FolderRepository().GetByID(ctx, req.Id)
	if err != nil {
		return &pb.FolderResponse{
			Status: &pb.Status{
				Success: false,
				Message: fmt.Sprintf("Klas√∂r bulunamadƒ±: %v", err),
				Code:    404,
			},
		}, nil
	}

	// G√ºncellemeleri uygula
	if req.LocalPath != "" {
		folder.LocalPath = req.LocalPath
	}
	if req.SyncMode != pb.SyncMode_SYNC_MODE_UNSPECIFIED {
		folder.SyncMode = convertSyncMode(req.SyncMode)
	}

	// Kaydet
	if err := h.container.FolderRepository().Update(ctx, folder); err != nil {
		return &pb.FolderResponse{
			Status: &pb.Status{
				Success: false,
				Message: fmt.Sprintf("Klas√∂r g√ºncellenemedi: %v", err),
				Code:    500,
			},
		}, nil
	}

	return &pb.FolderResponse{
		Status: &pb.Status{
			Success: true,
			Message: "Klas√∂r ba≈üarƒ±yla g√ºncellendi",
			Code:    200,
		},
		Folder: convertFolderToProto(folder),
	}, nil
}

// DeleteFolder klas√∂r siler
func (h *FolderHandler) DeleteFolder(ctx context.Context, req *pb.DeleteFolderRequest) (*pb.Status, error) {
	if err := h.container.FolderRepository().Delete(ctx, req.Id); err != nil {
		return &pb.Status{
			Success: false,
			Message: fmt.Sprintf("Klas√∂r silinemedi: %v", err),
			Code:    500,
		}, nil
	}

	return &pb.Status{
		Success: true,
		Message: "Klas√∂r ba≈üarƒ±yla silindi",
		Code:    200,
	}, nil
}

// ToggleFolderActive klas√∂r√º aktif/pasif yapar
func (h *FolderHandler) ToggleFolderActive(ctx context.Context, req *pb.ToggleFolderActiveRequest) (*pb.FolderResponse, error) {
	folder, err := h.container.FolderRepository().GetByID(ctx, req.Id)
	if err != nil {
		return &pb.FolderResponse{
			Status: &pb.Status{
				Success: false,
				Message: fmt.Sprintf("Klas√∂r bulunamadƒ±: %v", err),
				Code:    404,
			},
		}, nil
	}

	// Mevcut durumun tersini al (TOGGLE)
	folder.IsActive = !folder.IsActive

	if err := h.container.FolderRepository().Update(ctx, folder); err != nil {
		return &pb.FolderResponse{
			Status: &pb.Status{
				Success: false,
				Message: fmt.Sprintf("Klas√∂r g√ºncellenemedi: %v", err),
				Code:    500,
			},
		}, nil
	}

	return &pb.FolderResponse{
		Status: &pb.Status{
			Success: true,
			Message: "Klas√∂r durumu g√ºncellendi",
			Code:    200,
		},
		Folder: convertFolderToProto(folder),
	}, nil
}

// ScanFolder klas√∂r√º tarar ve dosyalarƒ± kaydeder
func (h *FolderHandler) ScanFolder(ctx context.Context, req *pb.ScanFolderRequest) (*pb.ScanFolderResponse, error) {
	// Klas√∂r√º getir
	folder, err := h.container.FolderRepository().GetByID(ctx, req.FolderId)
	if err != nil {
		return &pb.ScanFolderResponse{
			Status: &pb.Status{
				Success: false,
				Message: fmt.Sprintf("Klas√∂r bulunamadƒ±: %v", err),
				Code:    404,
			},
		}, nil
	}

	// Tarama yap
	savedCount, err := h.scanAndSaveFiles(ctx, folder)
	if err != nil {
		return &pb.ScanFolderResponse{
			Status: &pb.Status{
				Success: false,
				Message: fmt.Sprintf("Klas√∂r taranamadƒ±: %v", err),
				Code:    500,
			},
		}, nil
	}

	return &pb.ScanFolderResponse{
		Status: &pb.Status{
			Success: true,
			Message: fmt.Sprintf("%d dosya ba≈üarƒ±yla tarandƒ± ve kaydedildi", savedCount),
			Code:    200,
		},
		FilesSaved: int32(savedCount),
	}, nil
}

// Helper fonksiyonlar

func convertFolderToProto(f *entity.Folder) *pb.Folder {
	if f == nil {
		return nil
	}

	return &pb.Folder{
		Id:           f.ID,
		LocalPath:    f.LocalPath,
		SyncMode:     convertSyncModeToProto(f.SyncMode),
		LastScanTime: timestamppb.New(f.LastScanTime),
		IsActive:     f.IsActive,
		CreatedAt:    timestamppb.New(f.CreatedAt),
		UpdatedAt:    timestamppb.New(f.UpdatedAt),
	}
}

func convertSyncMode(mode pb.SyncMode) entity.SyncMode {
	switch mode {
	case pb.SyncMode_SYNC_MODE_BIDIRECTIONAL:
		return entity.SyncModeBidirectional
	case pb.SyncMode_SYNC_MODE_SEND_ONLY:
		return entity.SyncModeSendOnly
	case pb.SyncMode_SYNC_MODE_RECEIVE_ONLY:
		return entity.SyncModeReceiveOnly
	default:
		return entity.SyncModeBidirectional
	}
}

func convertSyncModeToProto(mode entity.SyncMode) pb.SyncMode {
	switch mode {
	case entity.SyncModeBidirectional:
		return pb.SyncMode_SYNC_MODE_BIDIRECTIONAL
	case entity.SyncModeSendOnly:
		return pb.SyncMode_SYNC_MODE_SEND_ONLY
	case entity.SyncModeReceiveOnly:
		return pb.SyncMode_SYNC_MODE_RECEIVE_ONLY
	default:
		return pb.SyncMode_SYNC_MODE_BIDIRECTIONAL
	}
}

// scanAndSaveFiles klas√∂r√º tarar ve dosyalarƒ± veritabanƒ±na kaydeder
func (h *FolderHandler) scanAndSaveFiles(ctx context.Context, folder *entity.Folder) (int, error) {
	// FileScanner olu≈ütur
	fileScanner := scanner.NewFileScanner()

	// Klas√∂r√º tara
	scanResults, err := fileScanner.ScanDirectory(folder.LocalPath)
	if err != nil {
		return 0, fmt.Errorf("klas√∂r taranamadƒ±: %w", err)
	}

	log.Printf("üìÇ %s klas√∂r√ºnde %d dosya bulundu", folder.LocalPath, len(scanResults))

	// Her dosyayƒ± veritabanƒ±na kaydet
	savedCount := 0
	for _, result := range scanResults {
		// File entity olu≈ütur
		file := entity.NewFile(
			folder.ID,
			result.Path,
			result.Size,
			time.Unix(result.ModTime, 0),
		)

		// Veritabanƒ±na kaydet
		if err := h.container.FileRepository().Create(ctx, file); err != nil {
			log.Printf("‚ö†Ô∏è Dosya kaydedilemedi (%s): %v", result.Path, err)
			continue
		}
		savedCount++
	}

	// Folder'ƒ±n LastScanTime'ƒ±nƒ± g√ºncelle
	folder.UpdateScanTime()
	if err := h.container.FolderRepository().Update(ctx, folder); err != nil {
		log.Printf("‚ö†Ô∏è LastScanTime g√ºncellenemedi: %v", err)
	}

	return savedCount, nil
}

